# wgpu_app

./: .gitignore  Cargo.toml
Examples/: texture_from_cpu.rs
Examples/cpu_texture/: fullscreen_texture.rs  main.rs  screen_rect.rs
Examples/the matrix/: Cargo.toml
Examples/the matrix/assets/: shader.wgsl
Examples/the matrix/src/: fps.rs  main.rs  matrix.rs  push_const.rs
Examples/the_matrix/assets/: shader.wgsl
Examples/the_matrix/src/: main.rs  matrix.rs
Examples/three_d/: Cargo.toml  geometry.rs  main.rs
Examples/three_d/assets/: shader.wgsl
Examples/three_d/src/: geometry.rs  main.rs
src/: event.rs  events.rs  fullscreen_texture.rs  geometry.rs  lib.rs  math.rs  render_pods.rs  screen_shader.wgsl  wgpu_app.rs
