[package]
name = "wgpu_app"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20"
winit = "0.30"
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
glam = "0.27"

[[example]]
name = "cpu_texture"
path = "Examples/cpu_texture/main.rs"


[[example]]
name = "three_d"
path = "Examples/three_d/main.rs"
