[package]
name = "wgpu_app"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
wgpu = "0.20"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
glam = { version = "0.27", features = ["bytemuck"] }
winit = "0.30"

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }

[[example]]
name = "cpu_texture"
path = "Examples/cpu_texture/main.rs"

[workspace]
members = ["Examples/three_d"]