[package]
name = "wgpu_app"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
wgpu = "22.1"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
glam = { version = "0.29", features = ["bytemuck"] }
winit = "0.30"
rand = "0.8"
imaginarium = { git = "https://github.com/xorza/imaginarium.git" }

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }

[[example]]
name = "cpu_texture"
path = "Examples/cpu_texture/main.rs"

[workspace]
members = ["Examples/three_d", "Examples/the matrix"]